[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fondo/BackgroundParallax.tscn" type="PackedScene" id=2]
[ext_resource path="res://hud/hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://spawners/gift_spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fondo/floor.tscn" type="PackedScene" id=5]
[ext_resource path="res://world.gd" type="Script" id=6]
[ext_resource path="res://spawners/floor_spawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://spawners/obstacle_spawner.tscn" type="PackedScene" id=8]

[node name="world" type="Node2D"]
script = ExtResource( 6 )

[node name="floor_spawner" parent="." instance=ExtResource( 7 )]

[node name="gift_spawner" parent="." instance=ExtResource( 4 )]

[node name="obstacle_spawner" parent="." instance=ExtResource( 8 )]

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 509, 299 )

[node name="hud" parent="." instance=ExtResource( 3 )]

[node name="BackgroundParallax" parent="." instance=ExtResource( 2 )]

[node name="floor" parent="." instance=ExtResource( 5 )]
[connection signal="start_game" from="." to="hud" method="_on_world_start_game"]
[connection signal="start_game" from="." to="player" method="_on_world_start_game"]
[connection signal="obstacle_hit" from="player" to="." method="_on_player_obstacle_hit"]
